# JobSearchHH-project-oop

./: .coverage  .flake8  README.md  main.py  pyproject.toml
data/: DefaultFilename.json  Python.json  for_test_file.json  newFilename.json  vacancies.json  vacancies_info.json  vacancies_information.json
src/: connect_to_hh_api.py  file_saver.py  utils.py  vacancy.py
tests/: conftest.py  test_connect_to_hh_api.py
